--- a/doc/todo.txt
+++ b/doc/todo.txt
@@ -3,18 +3,26 @@ Automated Tests
 DataBase (NoSQL)
 Jakarta CDI
 Doc
-Exam Historical (Report Graphs, Report Etc)
+Exam Historical
+---> Reports (Graphs)
+---> Wrong Answers
+---> Marked Answers
+
+Create an exam with most dificult questions, based on historical
 
 Random questions position
 Random question options position
 
-Create a exam with most dificult question, based on historical
-
-
 ---------------------------------------------------------
 
-Certification -> Exam Group -> Exam 
-                            (Exam Historical)
+Certification -> Exam Group -> Exam ------------> Question ----> Options
+                            (Exam Historical)       |
+                                                    |----------> Concepts
+                                                      
                             
-                            
-                                                              
+--------------------------------------------------------
+
+Fix the resize on discrete questions
+Fix space on first option
+
+                                                  
